# arrival_test_task

./: .gitignore  README.md  общие замечания.txt
balancer/: CMakeLists.txt
balancer/src/: common.h  main.cpp  route-map.txt
balancer/src/tcp-server/: tcp-server.cpp  tcp-server.h
balancer/src/tcp-session/: tcp-session.h
client/: CMakeLists.txt
client/src/: main.cpp
client/src/tcp-client/: tcp-client.cpp  tcp-client.h
common/: CMakeLists.txt
common/src/: remote-server.cpp  remote-server.h  types.h  utils.cpp  utils.h
logger/: CMakeLists.txt
logger/src/: logger.cpp  logger.h
proto/: CMakeLists.txt
proto/src/: base-message.cpp  base-message.h  init-message.cpp  init-message.h  regular-message.cpp  regular-message.h
proto/tests/: CMakeLists.txt  base-message-tests.cpp  init-message-tests.cpp  regular-message-tests.cpp  utils.cpp  utils.h
